Правки к первом узаданию

--- a/source/index.html
+++ b/source/index.html
@@ -1,150 +1,160 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
 </head>
+
 <body class="page__body">
-    <header class="page-header">
-        <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">
-                <span class="visually-hidden">Открыть меню</span>
-            </button>
-            <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
-                    <a>
-                        Главная
-                    </a>
-                </li>
-                <li class="site-list__item">
-                    <a href="">
-                        Фото и видео
-                    </a>
-                </li>
-                <li class="site-list__item">
-                    <a href="">
-                        Форма отзыва
-                    </a>
-                </li>
-                <li class="site-list__item">
-                    <a href="https://htmlacademy.ru/">
-                        HTML Academy
-                    </a>
-                </li>
-            </ul>
-            </div>
-        </nav>
-        <a class="page-header__logo">
-            <img src="https://via.placeholder.com/101x84" width="102" height="84" alt="город «Седона»">
-        </a>
-    </header>
-    <main class="page-main">
-        <h1 class="visually-hidden">Туристический город «Седона»</h1>
-        <section class="welcome">
-            <h2 class="visually-hidden">Приветствуем!</h2>
-            <div class="welcome__wrapper">
-                <img src="https://via.placeholder.com/115x28" width="115" height="28" alt="Добро пожаловать">
-                <img src="https://via.placeholder.com/107x18" width="107" height="18" alt="в безумно красивую">
-                <img src="https://via.placeholder.com/282x49" width="282" height="49" alt="Седону">
-                <img src="https://via.placeholder.com/173x46" width="173" height="46" alt="«Потому что Гранд Каньон отстой!»">
-            </div>
-        </section>
-        <section class="advantages">
-            <header class="advantages__header">
-                <h2 class="visually-hidden">Наши преимущества</h2>
-                <p class="advantages__slogan">
-                    Седона - небольшой<br>
-                    городок в Аризоне,<br>
-                    заслуживающий большего!
-                </p>
-                <p class="advantages__intro">
-                    Рассмотрим 5 причин, по  которым<br>
-                    Седона круче, чем Гранд Каньон!
-                </p>
-            </header>
-            <div class="advantages__wrapper ">
-                <ul class="advantages__list">
-                    <li class="advantages__item">
-                        <h3 class="advantages__title">Настоящий городок</h3>
-                        <span>№1</span>
-                        <p class="advantages__description">
-                            Седона не аттракцион для туристов,<br>
-                            там течет своя жизнь
-                        </p>
-                        <img src="https://via.placeholder.com/320x260" width="320" height="260" alt="Вид на уютный местный дом">
-                        <div class="deep-advantages__wrapper ">
-                            <ul class="deep-advantages__list">
-                                <li class="deep-advantages__item deep-advantages__item--house">
-                                    <h3 class="deep-advantages__title">Жилье</h3>
-                                    <p class="deep-advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                                </li>
-                                <li class="deep-advantages__item deep-advantages__item--souvenirs">
-                                    <h3 class="deep-advantages__title">Сувениры</h3>
-                                    <p class="deep-advantages__description">Не только китайского, но и местного производства!</p>
-                                </li>
-                                <li class="deep-advantages__item deep-advantages__item--food">
-                                    <h3 class="deep-advantages__title">Еда</h3>
-                                    <p class="deep-advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="advantages__item">
-                        <h3 class="advantages__title">Там есть мост дьявола</h3>
-                        <span>№2</span>
-                        <p class="advantages__description">
-                            Да, по нему можно пройти! Если вы<br>
-                            осмелитесь, конечно
-                        </p>
-                        <img src="https://via.placeholder.com/320x260" width="320" height="260" alt="Вид на уникальный местный ландшафт">
-                    </li>
-                    <li class="advantages__item">
-                        <h3 class="advantages__title">Небольшая площадь</h3>
-                        <span>№3</span>
-                        <p class="advantages__description">
-                            Все интересные места находятся<br>
-                            очень близко
-                        </p>
-                    </li>
-                    <li class="advantages__item">
-                        <h3 class="advantages__title">Красивая дорога</h3>
-                        <span>№4</span>
-                        <p class="advantages__description">
-                            Ехать в Седону из Лас-Вегаса<br>
-                            совсем не скучно!
-                        </p>
-                    </li>
-                    <li class="advantages__item">
-                        <h3 class="advantages__title">Мало туристов</h3>
-                        <span>№5</span>
-                        <p class="advantages__description">
-                            Большинство едет в Гранд Каньон<br>
-                            и толпится там
-                        </p>
-                    </li>
+  <header class="page-header">
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>
+              Главная
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="">
+              Фото и видео
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="https://htmlacademy.ru/">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <a class="page-header__logo">
+      <img src="https://via.placeholder.com/101x84" width="102" height="84" alt="город «Седона»">
+    </a>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Туристический город «Седона»</h1>
+    <section class="welcome">
+      <h2 class="visually-hidden">Приветствуем!</h2>
+      <div class="welcome__wrapper">
+        <img src="https://via.placeholder.com/115x28" width="115" height="28" alt="Добро пожаловать">
+        <img src="https://via.placeholder.com/107x18" width="107" height="18" alt="в безумно красивую">
+        <img src="https://via.placeholder.com/282x49" width="282" height="49" alt="Седону">
+        <img src="https://via.placeholder.com/173x46" width="173" height="46" alt="«Потому что Гранд Каньон отстой!»">
+      </div>
+    </section>
+    <section class="advantages">
+      <header class="advantages__header">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <p class="advantages__slogan">
+          Седона - небольшой<br>
+          городок в Аризоне,<br>
+          заслуживающий большего!
+        </p>
+        <p class="advantages__intro">
+          Рассмотрим 5 причин, по которым<br>
+          Седона круче, чем Гранд Каньон!
+        </p>
+      </header>
+      <div class="advantages__wrapper ">
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">Настоящий городок</h3>
+            <span>№1</span>
+            <p class="advantages__description">
+              Седона не аттракцион для туристов,<br>
+              там течет своя жизнь
+            </p>
+            <img src="https://via.placeholder.com/320x260" width="320" height="260" alt="Вид на уютный местный дом">
+            <div class="deep-advantages">
+              <div class="deep-advantages__wrapper ">
+                <ul class="deep-advantages__list">
+                  <li class="deep-advantages__item deep-advantages__item--house">
+                    <h3 class="deep-advantages__title">Жилье</h3>
+                    <p class="deep-advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  </li>
+                  <li class="deep-advantages__item deep-advantages__item--souvenirs">
+                    <h3 class="deep-advantages__title">Сувениры</h3>
+                    <p class="deep-advantages__description">Не только китайского, но и местного производства!</p>
+                  </li>
+                  <li class="deep-advantages__item deep-advantages__item--food">
+                    <h3 class="deep-advantages__title">Еда</h3>
+                    <p class="deep-advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+                    </p>
+                  </li>
                 </ul>
+              </div>
             </div>
-        </section>
-    </main>
-    <footer class="page-footer">
-        <div class="page-footer__wrapper">
-            <p class="sedona-tag">#visitsedona</p>
-            <div class="page-footer__social social">
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a class="social__link social__link--twitter" href="">Твитер</a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link social__link--facebook" href="">Фэйсбук</a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link social__link--youtube" href="">Ютюб</a>
-                    </li>
-                </ul>
-            </div>
-            <a class="copyright__link copyright__link--academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано HTML Academy</a>
-        </div>
-    </footer>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <span>№2</span>
+            <p class="advantages__description">
+              Да, по нему можно пройти! Если вы<br>
+              осмелитесь, конечно
+            </p>
+            <img src="https://via.placeholder.com/320x260" width="320" height="260"
+              alt="Вид на уникальный местный ландшафт">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <span>№3</span>
+            <p class="advantages__description">
+              Все интересные места находятся<br>
+              очень близко
+            </p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <span>№4</span>
+            <p class="advantages__description">
+              Ехать в Седону из Лас-Вегаса<br>
+              совсем не скучно!
+            </p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <span>№5</span>
+            <p class="advantages__description">
+              Большинство едет в Гранд Каньон<br>
+              и толпится там
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <p class="sedona-tag">#visitsedona</p>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="">Твитер</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="">Фэйсбук</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="">Ютюб</a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <a class="copyright__link copyright__link--academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано
+          HTML Academy</a>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
