Доделана разметка мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -132,6 +132,25 @@
         </ul>
       </div>
     </section>
+    <section class="search">
+      <h2 class="visually-hidden">Поиск гостиицы в Седоне</h2>
+      <div class="search__wrapper">
+        <h3 class="search__title">Заинтересовались?</h3>
+        <p class="search__description">
+          Укажите предполагаемые даты поездки,<br>
+          и мы покажем вам лучшие<br>
+          предложения гостиниц в Седоне
+        </p>
+        <a class="button" href="">Найти гостиницу</a>
+      </div>
+    </section>
+    <section class="map">
+      <h2 class="visually-hidden">Карта расположения города Седона</h2>
+      <div class="map__wrapper">
+        <img class="map__picture" src="https://via.placeholder.com/320x350" width="320" height="350"
+          alt="Карта с расположением города Седона, штат Аризона">
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
