--- a/source/form.html
+++ b/source/form.html
@@ -48,6 +48,97 @@
         <img src="https://via.placeholder.com/229x39" width="229" height="39" alt="Седона">
       </div>
     </div>
+    <section class="feedback">
+      <header class="feedback__header">
+        <h2 class="feedback__title">Оставьте свой отзыв</h2>
+        <p class="feedback__intro">
+          Помогите нашим отелям стать лучше!<br>
+          оставьте отзыв о них, а также о<br>
+          посещенных вами<br>
+          достопримечательностях
+        </p>
+      </header>
+      <section>
+        <h2 class="visually-hidden">Форма-отзыв</h2>
+        <form class="feedback-form form" action="https://echo.htmlacademy.ru" method="post">
+          <fieldset class="presenting form__item">
+            <legend class="presenting__title">Представьтесь:</legend>
+            <ul>
+              <li>
+                <label for="presenting-name">Имя<sup>*</sup>:</label>
+                <input id="presenting-name" type="text" name="user" placeholder="Петр">
+              </li>
+              <li>
+                <label for="presenting-surname">Фамилия<sup>*</sup>:</label>
+                <input id="presenting-surname" type="text" name="surname" placeholder="Иванов">
+              </li>
+              <li>
+                <label for="presenting-patronymic">Отчество:</label>
+                <input id="presenting-patronymic" type="text" name="patronymic" placeholder="Александрович">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="contacts form__item">
+            <legend class="contacts__title">Контактная информация:</legend>
+            <ul>
+              <li>
+                <label for="contacts-tel">Контактный телефон<sup>*</sup>:</label>
+                <input id="contacts-tel" type="number" name="tel" placeholder="Введите телефон">
+              </li>
+              <li>
+                <label for="contacts-email">Электронная почта<sup>*</sup>:</label>
+                <input id="contacts-email" type="email" name="email" placeholder="Введите e-mail">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="imprassion form__item">
+            <legend class="imprassion__title">Ваше общее впечатление:</legend>
+            <ul>
+              <li>
+                <input type="radio" name="imprassion-group" value="positive" id="filter-positive" checked>
+                <label for="filter-positive">Скорее положительное</label>
+              </li>
+              <li>
+                <input type="radio" name="imprassion-group" value="negative" id="filter-negative">
+                <label for="filter-negative">Скорее положительное</label>
+              </li>
+              <li>
+                <input type="radio" name="imprassion-group" value="negative" id="filter-difficult">
+                <label for="filter-difficult">Скорее положительное</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="visited form__item">
+            <legend class="visited__title">Посещенные достопримечательности:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="bridge" id="filter-bridge" checked>
+                <label for="filter-bridge">Мост Дьявола</label>
+              </li>
+              <li>
+                <input type="checkbox" name="mountain" id="filter-mountain" checked>
+                <label for="filter-mountain">Гора-Колокол</label>
+              </li>
+              <li>
+                <input type="checkbox" name="park" id="filter-park" checked>
+                <label for="filter-park">Слайд-парк</label>
+              </li>
+              <li>
+                <input type="checkbox" name="rocks" id="filter-rocks">
+                <label for="filter-rocks">Красные скалы</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="emotions form__item">
+            <legend class="emotions_title">Опишите свои эмоции:</legend>
+            <label class="visually-hidden" for="emotions-message"></label>
+            <textarea id="emotions-message" name="message" rows="1" cols="1"
+              placeholder="Опишите подробно все свои восторги"></textarea>
+          </fieldset>
+          <button class="filter-show" type="submit">Показать</button>
+        </form>
+      </section>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
