--- a/source/photo.html
+++ b/source/photo.html
@@ -91,6 +91,22 @@
         </div>
       </div>
     </section>
+    <section class="video">
+      <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
+      <div class="video__wrapper">
+        <h3 class="video__title">Все еще сомневаетесь?</h3>
+        <p class="video__description">Смотрите Видеопрезентацию и<br>
+          скорее за билетами, пока они не<br>
+          подорожали в очередной раз!</p>
+        <video controls poster="https://via.placeholder.com/320x201" width="320" height="201"
+          src="https://www.youtube.com/watch?v=_qHjLngt7OI"></video>
+        <div class="video-controls">
+          <button class="video-repeat" type="button">Повторить воспроизведение видео</button>
+          <button class="video-subtitle" type="button">Включить субтитры</button>
+          <button class="video-full" type="button">Развернуть видео на весь экран</button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
