--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -38,14 +40,14 @@
       </div>
     </nav>
     <a class="page-header__logo">
-      <img src="https://via.placeholder.com/101x84" width="102" height="84" alt="город «Седона»">
+      <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
     </a>
   </header>
   <main class="inner-page">
     <h1 class="visually-hidden">Отзывы о городе «Седона»</h1>
-    <div class="page-intro">
+    <div class="page-intro bg-page-intro">
       <div class="page-intro__wrapper">
-        <img src="https://via.placeholder.com/229x39" width="229" height="39" alt="Седона">
+        <img src="img/text-sedona.svg" width="229" height="39" alt="Седона">
       </div>
     </div>
     <section class="feedback">
