--- a/source/photo.html
+++ b/source/photo.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -38,13 +40,13 @@
       </div>
     </nav>
     <a class="page-header__logo">
-      <img src="https://via.placeholder.com/101x84" width="102" height="84" alt="город «Седона»">
+      <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
     </a>
   </header>
   <main class="inner-page">
-    <div class="page-intro">
+    <div class="page-intro bg-page-intro">
       <div class="page-intro__wrapper">
-        <img src="https://via.placeholder.com/229x39" width="229" height="39" alt="Седона">
+        <img src="img/text-sedona.svg" width="229" height="39" alt="Седона">
       </div>
     </div>
     <section class="photo-video">
@@ -60,28 +62,28 @@
         <div class="photo__wrapper">
           <ul class="photo__list">
             <li class="photo__item">
-              <img src="https://via.placeholder.com/280x280" width="280" height="280"
+              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на дорогу уходящую к горам во время захода солнца">
               <h3 class="photo__title">Неродные просторы</h3>
               <p class="photo__description">Автор фото: Борис</p>
               <button class="heart" type="button"><span class="likes-number">1350</span></button>
             </li>
             <li class="photo__item">
-              <img src="https://via.placeholder.com/280x280" width="280" height="280"
+              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280"
                 alt="Необычный местный какутус на фоне красных скал и зелени">
               <h3 class="photo__title">Местная растительность</h3>
               <p class="photo__description">Автор фото: Сергей</p>
               <button class="heart" type="button"><span class="likes-number">143</span></button>
             </li>
             <li class="photo__item">
-              <img src="https://via.placeholder.com/280x280" width="280" height="280"
+              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на горную извилистую дорогу, утапающую в зелени">
               <h3 class="photo__title">Дорога на север</h3>
               <p class="photo__description">Автор фото: Петр</p>
               <button class="heart" type="button"><span class="likes-number">96</span></button>
             </li>
             <li class="photo__item">
-              <img src="https://via.placeholder.com/280x280" width="280" height="280"
+              <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на красные горы и зеленую долину между ними">
               <h3 class="photo__title">Мост Дьявола</h3>
               <p class="photo__description">Автор фото: Антон</p>
