--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -66,7 +65,7 @@
         </p>
       </header>
       <div class="advantages__wrapper">
-        <ul class="advantages__list">
+        <ul class="advantages__list site-list">
           <li class="advantages__item ">
             <div class="blue-theme blue-theme__padding-1">
               <h3 class="advantages__title">Настоящий городок</h3>
@@ -79,7 +78,7 @@
             <img src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Вид на уютный местный дом">
             <div class="deep-advantages">
               <div class="deep-advantages__wrapper ">
-                <ul class="deep-advantages__list">
+                <ul class="deep-advantages__list site-list">
                   <li class="deep-advantages__item deep-advantages__item--house">
                     <h3 class="deep-advantages__title">Жилье</h3>
                     <p class="deep-advantages__description">Рекомендуем пожить в<br>
