--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -146,7 +145,7 @@
     <div class="page-footer__wrapper">
       <p class="sedona-tag">#visitsedona</p>
       <div class="page-footer__social social">
-        <ul class="social__list">
+        <ul class="social__list site-list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">Твитер</a>
           </li>
