--- a/source/photo.html
+++ b/source/photo.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -60,7 +59,7 @@
       </header>
       <div class="photo">
         <div class="photo__wrapper">
-          <ul class="photo__list">
+          <ul class="photo__list site-list">
             <li class="photo__item">
               <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на дорогу уходящую к горам во время захода солнца">
@@ -114,7 +113,7 @@
     <div class="page-footer__wrapper">
       <p class="sedona-tag">#visitsedona</p>
       <div class="page-footer__social social">
-        <ul class="social__list">
+        <ul class="social__list site-list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">Твитер</a>
           </li>
