Второе задание на препроцессоры

--- a/source/photo.html
+++ b/source/photo.html
@@ -99,7 +99,7 @@
         <p class="video__description">Смотрите Видеопрезентацию и<br>
           скорее за билетами, пока они не<br>
           подорожали в очередной раз!</p>
-        <video controls poster="https://via.placeholder.com/320x201" width="320" height="201"
+        <video controls poster="img/video-mobile@1x.jpg" width="320" height="201"
           src="https://www.youtube.com/watch?v=_qHjLngt7OI"></video>
         <div class="video-controls">
           <button class="video-repeat" type="button">Повторить воспроизведение видео</button>
