--- a/source/form.html
+++ b/source/form.html
@@ -64,37 +64,37 @@
         <form class="feedback-form form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="presenting form__item">
             <legend class="presenting__title">Представьтесь:</legend>
-            <ul>
+            <ul class="site-list">
               <li>
                 <label for="presenting-name">Имя<sup>*</sup>:</label>
-                <input id="presenting-name" type="text" name="user" placeholder="Петр">
+                <input class="form-input" id="presenting-name" type="text" name="user" placeholder="Петр">
               </li>
               <li>
                 <label for="presenting-surname">Фамилия<sup>*</sup>:</label>
-                <input id="presenting-surname" type="text" name="surname" placeholder="Иванов">
+                <input class="form-input" id="presenting-surname" type="text" name="surname" placeholder="Иванов">
               </li>
               <li>
                 <label for="presenting-patronymic">Отчество:</label>
-                <input id="presenting-patronymic" type="text" name="patronymic" placeholder="Александрович">
+                <input class="form-input" id="presenting-patronymic" type="text" name="patronymic" placeholder="Александрович">
               </li>
             </ul>
           </fieldset>
           <fieldset class="contacts form__item">
             <legend class="contacts__title">Контактная информация:</legend>
-            <ul>
+            <ul class="site-list">
               <li>
                 <label for="contacts-tel">Контактный телефон<sup>*</sup>:</label>
-                <input id="contacts-tel" type="number" name="tel" placeholder="Введите телефон">
+                <input class="form-input" id="contacts-tel" type="number" name="tel" placeholder="Введите телефон">
               </li>
               <li>
                 <label for="contacts-email">Электронная почта<sup>*</sup>:</label>
-                <input id="contacts-email" type="email" name="email" placeholder="Введите e-mail">
+                <input class="form-input" id="contacts-email" type="email" name="email" placeholder="Введите e-mail">
               </li>
             </ul>
           </fieldset>
           <fieldset class="imprassion form__item">
             <legend class="imprassion__title">Ваше общее впечатление:</legend>
-            <ul>
+            <ul class="site-list">
               <li>
                 <input type="radio" name="imprassion-group" value="positive" id="filter-positive" checked>
                 <label for="filter-positive">Скорее положительное</label>
@@ -111,7 +111,7 @@
           </fieldset>
           <fieldset class="visited form__item">
             <legend class="visited__title">Посещенные достопримечательности:</legend>
-            <ul>
+            <ul class="site-list">
               <li>
                 <input type="checkbox" name="bridge" id="filter-bridge" checked>
                 <label for="filter-bridge">Мост Дьявола</label>
@@ -133,10 +133,10 @@
           <fieldset class="emotions form__item">
             <legend class="emotions_title">Опишите свои эмоции:</legend>
             <label class="visually-hidden" for="emotions-message"></label>
-            <textarea id="emotions-message" name="message" rows="1" cols="1"
+            <textarea class="emotions-message" id="emotions-message" name="message" rows="1" cols="1"
               placeholder="Опишите подробно все свои восторги"></textarea>
           </fieldset>
-          <button class="filter-show" type="submit">Показать</button>
+          <button class="button filter-show" type="submit">Отправить отзыв</button>
         </form>
       </section>
     </section>
