Адаптивная сетка 1 задание

--- a/source/form.html
+++ b/source/form.html
@@ -16,17 +16,17 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a>
+            <a href="index.html">
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a href="">
+            <a href="photo.html">
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="">
+            <a>
               Форма отзыва
             </a>
           </li>
@@ -52,12 +52,8 @@
     <section class="feedback">
       <header class="feedback__header">
         <h2 class="feedback__title">Оставьте свой отзыв</h2>
-        <p class="feedback__intro">
-          Помогите нашим отелям стать лучше!<br>
-          оставьте отзыв о них, а также о<br>
-          посещенных вами<br>
-          достопримечательностях
-        </p>
+        <p class="feedback__intro">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами
+          достопримечательностях</p>
       </header>
       <section>
         <h2 class="visually-hidden">Форма-отзыв</h2>
@@ -75,7 +71,8 @@
               </li>
               <li>
                 <label for="presenting-patronymic">Отчество:</label>
-                <input class="form-input" id="presenting-patronymic" type="text" name="patronymic" placeholder="Александрович">
+                <input class="form-input" id="presenting-patronymic" type="text" name="patronymic"
+                  placeholder="Александрович">
               </li>
             </ul>
           </fieldset>
@@ -143,9 +140,9 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <p class="sedona-tag">#visitsedona</p>
-      <div class="page-footer__social social">
-        <ul class="social__list site-list">
+      <div class="sedona-tag page-footer__item">#visitsedona</div>
+      <div class="page-footer__social social page-footer__item">
+        <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">Твитер</a>
           </li>
@@ -157,7 +154,7 @@
           </li>
         </ul>
       </div>
-      <div class="copyright">
+      <div class="copyright page-footer__item">
         <a class="copyright__link copyright__link--academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано
           HTML Academy</a>
       </div>
