--- a/source/index.html
+++ b/source/index.html
@@ -21,12 +21,12 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="">
+            <a href="photo.html">
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="">
+            <a href="form.html">
               Форма отзыва
             </a>
           </li>
@@ -54,86 +54,75 @@
     <section class="advantages">
       <header class="advantages__header">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <p class="advantages__slogan main-slogan">
-          Седона - небольшой<br>
-          городок в Аризоне,<br>
-          заслуживающий большего!
-        </p>
-        <p class="advantages__intro main-intro">
-          Рассмотрим 5 причин, по которым<br>
-          Седона круче, чем Гранд Каньон!
-        </p>
+        <p class="advantages__slogan main-slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages__intro main-intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </header>
       <div class="advantages__wrapper">
-        <ul class="advantages__list site-list">
-          <li class="advantages__item ">
-            <div class="blue-theme blue-theme__padding-1">
+        <ul class="advantages__list">
+          <li class="advantages__item first-advantage">
+            <div class="blue-theme">
               <h3 class="advantages__title">Настоящий городок</h3>
               <span>№1</span>
               <p class="advantages__description">
-                Седона не аттракцион для туристов,<br>
-                там течет своя жизнь
+                Седона не аттракцион для туристов, там течет своя жизнь
               </p>
             </div>
             <img src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Вид на уютный местный дом">
+          </li>
+          <li class="advantages__item">
             <div class="deep-advantages">
               <div class="deep-advantages__wrapper ">
-                <ul class="deep-advantages__list site-list">
+                <ul class="deep-advantages__list">
                   <li class="deep-advantages__item deep-advantages__item--house">
                     <h3 class="deep-advantages__title">Жилье</h3>
-                    <p class="deep-advantages__description">Рекомендуем пожить в<br>
-                      настоящем мотеле, все как в<br>
-                      кино!</p>
+                    <p class="deep-advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                   </li>
                   <li class="deep-advantages__item deep-advantages__item--souvenirs">
                     <h3 class="deep-advantages__title">Сувениры</h3>
-                    <p class="deep-advantages__description">Не только китайского, но и<br>
-                      местного производства!</p>
+                    <p class="deep-advantages__description">Не только китайского, но и местного производства!</p>
                   </li>
                   <li class="deep-advantages__item deep-advantages__item--food">
                     <h3 class="deep-advantages__title">Еда</h3>
-                    <p class="deep-advantages__description">Всегда заказывайте<br>
-                      фирменный бургер, вы не<br>
-                      разочаруетесь!
+                    <p class="deep-advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!
                     </p>
                   </li>
                 </ul>
               </div>
             </div>
           </li>
-          <li class="advantages__item">
-            <div class="blue-theme blue-theme__padding-2">
+          <li class="advantages__item  second-advantage">
+            <div class="blue-theme">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
               <span>№2</span>
               <p class="advantages__description">
-                Да, по нему можно пройти! Если вы<br>
+                Да, по нему можно пройти! Если вы
                 осмелитесь, конечно
               </p>
             </div>
-            <img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Вид на уникальный местный ландшафт">
+            <img class="second-advantage__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260"
+              alt="Вид на уникальный местный ландшафт">
           </li>
-          <li class="advantages__item standart-theme standart-theme__padding">
+        </ul>
+        <ul class="advantages__list advantages__others">
+          <li class="advantages__item standart-theme">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <span>№3</span>
             <p class="advantages__description">
-              Все интересные места находятся<br>
-              очень близко
+              Все интересные места находятся очень близко
             </p>
           </li>
-          <li class="advantages__item standart-theme standart-theme__padding">
+          <li class="advantages__item standart-theme">
             <h3 class="advantages__title">Красивая дорога</h3>
             <span>№4</span>
             <p class="advantages__description">
-              Ехать в Седону из Лас-Вегаса<br>
-              совсем не скучно!
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
           </li>
-          <li class="advantages__item standart-theme standart-theme__padding">
+          <li class="advantages__item standart-theme">
             <h3 class="advantages__title">Мало туристов</h3>
             <span>№5</span>
             <p class="advantages__description">
-              Большинство едет в Гранд Каньон<br>
-              и толпится там
+              Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
         </ul>
@@ -144,9 +133,7 @@
       <div class="search__wrapper">
         <h3 class="search__title">Заинтересовались?</h3>
         <p class="search__description">
-          Укажите предполагаемые даты поездки,<br>
-          и мы покажем вам лучшие<br>
-          предложения гостиниц в Седоне
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a class="button" href="">Найти гостиницу</a>
       </div>
@@ -161,8 +148,8 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <p class="sedona-tag">#visitsedona</p>
-      <div class="page-footer__social social">
+      <div class="sedona-tag page-footer__item">#visitsedona</div>
+      <div class="page-footer__social social page-footer__item">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">Твитер</a>
@@ -175,7 +162,7 @@
           </li>
         </ul>
       </div>
-      <div class="copyright">
+      <div class="copyright page-footer__item">
         <a class="copyright__link copyright__link--academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано
           HTML Academy</a>
       </div>
