--- a/source/photo.html
+++ b/source/photo.html
@@ -16,7 +16,7 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a>
+            <a href="index.html">
               Главная
             </a>
           </li>
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="">
+            <a href="form.html">
               Форма отзыва
             </a>
           </li>
@@ -49,44 +49,49 @@
       </div>
     </div>
     <section class="photo-video">
-      <h1 class="photo-video_title">Фото и видео</h1>
       <header class="photo-video__header">
-        <p class="photo-video__intro">
-          Не можете решиться на путешествие<br>
-          из-за курса? Фотографии помогут<br>
-          вам забыть о политике и экономике.
-        </p>
+        <h1 class="photo-video__title">Фото и видео</h1>
+        <p class="photo-video__intro">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+          политике и экономике.</p>
       </header>
       <div class="photo">
         <div class="photo__wrapper">
-          <ul class="photo__list site-list">
-            <li class="photo__item">
-              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
-                alt="Вид на дорогу уходящую к горам во время захода солнца">
+          <div class="photo__item photo__first">
+            <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
+              alt="Вид на дорогу уходящую к горам во время захода солнца">
+            <div class="photo-text__wrapper">
               <h3 class="photo__title">Неродные просторы</h3>
               <p class="photo__description">Автор фото: Борис</p>
               <button class="heart" type="button"><span class="likes-number">1350</span></button>
-            </li>
+            </div>
+          </div>
+          <ul class="photo__list">
             <li class="photo__item">
               <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280"
                 alt="Необычный местный какутус на фоне красных скал и зелени">
-              <h3 class="photo__title">Местная растительность</h3>
-              <p class="photo__description">Автор фото: Сергей</p>
-              <button class="heart" type="button"><span class="likes-number">143</span></button>
+              <div class="photo-text__wrapper">
+                <h3 class="photo__title">Местная растительность</h3>
+                <p class="photo__description">Автор фото: Сергей</p>
+                <button class="heart" type="button"><span class="likes-number">143</span></button>
+              </div>
             </li>
             <li class="photo__item">
               <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на горную извилистую дорогу, утапающую в зелени">
-              <h3 class="photo__title">Дорога на север</h3>
-              <p class="photo__description">Автор фото: Петр</p>
-              <button class="heart" type="button"><span class="likes-number">96</span></button>
+              <div class="photo-text__wrapper">
+                <h3 class="photo__title">Дорога на север</h3>
+                <p class="photo__description">Автор фото: Петр</p>
+                <button class="heart" type="button"><span class="likes-number">96</span></button>
+              </div>
             </li>
             <li class="photo__item">
               <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на красные горы и зеленую долину между ними">
-              <h3 class="photo__title">Мост Дьявола</h3>
-              <p class="photo__description">Автор фото: Антон</p>
-              <button class="heart" type="button"><span class="likes-number">254</span></button>
+              <div class="photo-text__wrapper">
+                <h3 class="photo__title">Мост Дьявола</h3>
+                <p class="photo__description">Автор фото: Антон</p>
+                <button class="heart" type="button"><span class="likes-number">254</span></button>
+              </div>
             </li>
           </ul>
         </div>
@@ -111,9 +116,9 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <p class="sedona-tag">#visitsedona</p>
-      <div class="page-footer__social social">
-        <ul class="social__list site-list">
+      <div class="sedona-tag page-footer__item">#visitsedona</div>
+      <div class="page-footer__social social page-footer__item">
+        <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">Твитер</a>
           </li>
@@ -125,7 +130,7 @@
           </li>
         </ul>
       </div>
-      <div class="copyright">
+      <div class="copyright page-footer__item">
         <a class="copyright__link copyright__link--academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано
           HTML Academy</a>
       </div>
